--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -269,6 +269,19 @@
      <string>1</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="EraserButton">
+    <property name="geometry">
+     <rect>
+      <x>980</x>
+      <y>0</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>橡皮擦</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
